# rust_simple_chat_bot

./: Cargo.toml  README.md
src/: main.rs
src/models/: helper_structs.rs  main_structs.rs  mod.rs
