[package]
name = "rust_chat_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread", "macros"] }
